--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,33 +1,14 @@
-Package: nhsbsaShinyR
-Title: Template for NHSBSA {shiny} apps
-Version: 0.0.0.9002
-Authors@R: 
-    c(person(given = "DALL",
-             family = "",
-             role = c("aut", "cre"),
-             email = "dall@nhsbsa.nhs.uk"),
-      person(given = "Adam",
-             family = "Ivison",
-             role = "ctb",
-             email = ""),
-      person(given = "Kayoung",
-             family = "Goffe",
-             role = "ctb",
-             email = "kayoung.goffe@nhsbsa.nhs.uk"),
-      person(given = "Steven",
-             family = "Buckley",
-             role = "ctb",
-             email = "steven.buckley@nhsbsa.nhs.uk"),
-      person(given = "Mark",
-             family = "McPherson",
-             role = "ctb",
-             email = "mark.mcpherson@nhsbsa.nhs.uk"))
-Description: Template used for NHSBSA Data Science and Advanced Analytics
-  {shiny} apps.
+Package: nhsbsaGPG
+Title: NHSBSA Gender Pay Gap Report
+Version: 0.0.0.9000
+Authors@R: person("Kayoung", "Goffe", 
+          "Kayoung.Goffe@nhsbsa.nhs.uk", 
+           role = c("aut", "cre"))
+Description: NHSBSA gender pay gap report template.
 License: Apache License (>= 2)
-Depends: 
+Depends:
     R (>= 4.0)
-Imports: 
+Imports:
     config,
     dplyr,
     golem,
@@ -41,6 +22,7 @@ Imports:
     shinyjs
 Suggests:
     pkgload,
+    testthat (>= 3.0.0),
     usethis
 Remotes:
     nhsbsa-data-analytics/nhsbsaR,
@@ -48,3 +30,4 @@ Remotes:
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
+Config/testthat/edition: 3
