create tidy dummy data

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,6 @@ Depends:
     R (>= 4.0)
 Imports:
     config,
-    dplyr,
     golem,
     highcharter,
     htmltools,
@@ -21,7 +20,13 @@ Imports:
     rlang,
     scrollytell,
     shiny,
-    shinyjs
+    shinyjs,
+    dplyr (>= 1.1.3),
+    dbplyr (>= 2.3.3),
+    forcats (>= 1.0.0),
+    futile.logger (>= 1.4.3),
+    stringr,
+    formatR
 Suggests:
     pkgload,
     testthat (>= 3.0.0),
