--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ rsconnect
 # Excel files (including macros and templates) #
 ################################################
 *.[xX][lL][sS][xXmMtT]?
+data/*
