--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,20 +17,19 @@ Imports:
     htmltools,
     magrittr,
     nhsbsaR,
-    scrollytell,
     shiny,
     shinyjs,
     dplyr (>= 1.1.3),
     futile.logger (>= 1.4.3),
-    stringr
+    stringr,
+    htmlwidgets
 Suggests:
     pkgload,
     testthat (>= 3.0.0),
     usethis,
     tidyr
 Remotes:
-    nhsbsa-data-analytics/nhsbsaR,
-    statistiekcbs/scrollytell
+    nhsbsa-data-analytics/nhsbsaR
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
