--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,14 +22,14 @@ Imports:
     dplyr (>= 1.1.3),
     futile.logger (>= 1.4.3),
     stringr,
-    htmlwidgets,
-    graphics,
-    stats
+    htmlwidgets
 Suggests:
     pkgload,
     testthat (>= 3.0.0),
     usethis,
-    tidyr
+    tidyr,
+    graphics,
+    stats
 Remotes:
     nhsbsa-data-analytics/nhsbsaR
 Encoding: UTF-8
