--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,8 @@ Imports:
     dplyr (>= 1.1.3),
     futile.logger (>= 1.4.3),
     stringr,
-    htmlwidgets
+    htmlwidgets,
+    markdown
 Suggests:
     pkgload,
     testthat (>= 3.0.0),
