add as dumbbell chart.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(gpg_bar)
 export(gpg_column)
 export(gpg_data)
+export(gpg_dumbbell)
 export(gpg_pyramid)
 export(gpg_stack)
 export(gpg_trend)
