--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -34,7 +34,9 @@ jobs:
           token: '${{ secrets.GITHUB_TOKEN }}'
 
       - uses: r-lib/actions/check-r-package@v2
-
+        with:
+          error-on: 'error'
+          
       - name: Show testthat output
         if: always()
         run: find check -name 'testthat.Rout*' -exec cat '{}' \; || true
