--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -35,7 +35,7 @@ jobs:
 
       - uses: r-lib/actions/check-r-package@v2
         with:
-          error-on: 'error'
+          error-on: '"error"'
           
       - name: Show testthat output
         if: always()
