add_md_word_review
markdown to word review process added (copied from nhsbsaShiny)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export(accessible_action_link)
 export(accessible_radio_buttons)
+export(gen_template_doc)
 export(gpg_bar)
 export(gpg_column)
 export(gpg_data)
@@ -16,6 +17,7 @@ export(h3_tabstop)
 export(h4_tabstop)
 export(h5_tabstop)
 export(h6_tabstop)
+export(md_to_word)
 export(nhs_card)
 export(nhs_card_tabstop)
 export(nhs_footer)
@@ -26,7 +28,12 @@ export(nhs_header)
 export(nhs_navlistPanel)
 export(nhs_selectInput)
 export(nhs_selectizeInput)
+export(review_md)
+export(review_md_diff)
+export(review_md_dir)
 export(run_app)
+export(update_md)
+export(word_to_md)
 import(shiny)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
