--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,8 @@ Imports:
     htmlwidgets,
     shinyWidgets,
     ggplot2,
-    janitor
+    janitor,
+    markdown
 Suggests:
     pkgload,
     usethis,
@@ -38,7 +39,6 @@ Suggests:
     officedown,
     officer,
     purrr,
-    markdown,
     rmarkdown,
     rprojroot,
     testthat,
@@ -50,3 +50,4 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.1
 Config/testthat/edition: 3
+VignetteBuilder: knitr
