--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ data/*
 data_temp/*
 /doc/
 /Meta/
-review/tests/_snaps/*
+inst/review/*
 !review/temp/.gitkeep
 # Any docx files
 *.[dD][oO][cC][xX]
